--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -25,7 +25,7 @@
 
 .button-primary {
   background-color: white;
-  color: #1F2429;
+  color: #1f2429;
 }
 
 .button-secondary {
@@ -33,8 +33,25 @@
   color: white;
 }
 
+.button-tertiary {
+  padding: 8px;
+  border-radius: 24px;
+  border: 2px solid #1f2429;
+}
+
 .button-full {
   width: 100%;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 0;
+}
+
+.buttonDownload {
+  margin-right: auto;
+  font-family: inherit;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 600;
 }
