--- a/src/components/Typography/Typography.module.css
+++ b/src/components/Typography/Typography.module.css
@@ -8,18 +8,20 @@
   line-height: 16px;
   font-size: 12px;
   font-weight: 600;
-  filter: opacity(0.2);
+  filter: opacity(0.6);
   margin-top: 4px;
 }
 
 .caption {
-  line-height: 16px;
-  font-size: 12px;
+  line-height: 20px;
+  font-size: 15px;
   font-weight: 500;
+  margin-top: 20px;
+  filter: opacity(0.8);
 }
 
 .theme-white {
-  color: #1F2429;
+  color: #1f2429;
 }
 
 .theme-dark {
